<resources>
    <string name="app_name">FinancasApp</string>
    <string name="title_activity_calculator">CalculatorActivity</string>
    <string name="sete">7</string>
    <string name="oito">8</string>
    <string name="nove">9</string>
    <string name="quatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="um">1</string>
    <string name="dois">2</string>
    <string name="tres">3</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="confirmar">Confirmar</string>
    <string name="novo">Novo</string>
</resources>
